@@ -11,7 +11,7 @@ MODULE mode_polycrystal
 !*     Université de Lille, Sciences et Technologies                              *
 !*     UMR CNRS 8207, UMET - C6, F-59655 Villeneuve D'Ascq, France                *
 !*     pierre.hirel@univ-lille.fr                                                 *
-!* Last modification: P. Hirel - 12 April 2022                                    *
+!* Last modification: P. Hirel - 16 May 2022                                      *
 !**********************************************************************************
 !* OUTLINE:                                                                       *
 !* 100        Read atom positions of seed (usually a unit cell) from ucfile       *
@@ -790,7 +790,7 @@ DO
           rotmat(3,1) = -1.d0*DSIN(P2)
           rotmat(1,3) = DSIN(P2)
           rotmat(1,1) = DCOS(P2)
-          vorient(Nnodes,:,:) = MATMUL( rotmat(:,:) , vorient(Nnodes,:,:) )
+          vorient(Nnodes,:,:) = MATMUL( vorient(Nnodes,:,:) , rotmat(:,:) )
           !Construct the rotation matrix around Z
           rotmat(:,:) = 0.d0
           rotmat(3,3) = 1.d0
@@ -798,7 +798,8 @@ DO
           rotmat(1,2) = -1.d0*DSIN(P3)
           rotmat(2,1) = DSIN(P3)
           rotmat(2,2) = DCOS(P3)
-          vorient(Nnodes,:,:) = MATMUL( rotmat(:,:) , vorient(Nnodes,:,:) )
+          vorient(Nnodes,:,:) = MATMUL( vorient(Nnodes,:,:) , rotmat(:,:) )
+          !Final rotation matrix = Rz.Ry.Rx
         ENDIF
       ENDIF
       !
