@@ -12,6 +12,7 @@ Master
 - in mode "--central-symmetry", atoms with 4 neighbours are now compared to tetrahedral environment; if angles are close to those in a tetrahedron, this criterion is used instead of central symmetry.
 - in mode "--merge", a new auxiliary property "sysID" is created, indicating for each atom the index of the system it belonged to.
 - in mode "--nye", if user does not provide an output file name then a default one in CFG format is created.
+- in mode "--polycrystal", fixed a bug where rotations provided were performed using Z, Y, X permutation instead of X, Y, Z. Thanks to Marcin Minkowsky, Tampere University, Finland, for pointing out this bug.
 - in mode "--rdf", improved efficiency in the computation of the partial RDFs.
 - option "-reduce-cell" now checks that stoichiometry is preserved.
 - fixed a bug when reading and writing POSCAR files where the keywords "Selective dynamics" were involved.
